changes to mobile view

--- a/index.html
+++ b/index.html
@@ -30,62 +30,67 @@
         <section class="content">
             <form>
 
-                <div class="halfWidth">
-                    <div class="form-group">
-                        <label for="projectName">Project Name:</label>
-                        <select class="form-control selectpicker" id="projectName" data-style="btn-select" title="Select Project Name">
-                            <option value="1">1</option>
-                            <option value="1">2</option>
-                            <option value="1">3</option>
-                            <option value="1">4</option>
-                        </select>
+                <div class="fullWidth">
+                    <div class="row">
+                        <div class="form-group col-sm-6">
+                            <label for="projectName">Project Name:</label>
+                            <select class="form-control selectpicker" id="projectName" data-style="btn-select" title="Select Project Name">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="inspecionNumber">Inspecion No:</label>
+                            <input type="text" class="form-control" id="inspecionNumber" placeholder="Inspecion Number">
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="ownerCompany">Owner(Company):</label>
+                            <select class="form-control selectpicker" id="ownerCompany" title="Select Owner(Company)">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="contractorCompany">Contractor(Company):</label>
+                            <select class="form-control selectpicker" id="contractorCompany" title="Select Contractor(Company)">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="description">Description</label>
+                            <input type="text" class="form-control" id="description" placeholder="Description">
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="inspectionDate">Inspection Date:</label>
+                            <input type="text" class="form-control datepicker" placeholder="Date" id="inspectionDate" data-date-format="mm/dd/yyyy">
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="consultantCompany">Consultant(Company):</label>
+                            <select class="form-control selectpicker" id="consultantCompany" title="Consultant(Company)">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="preparedBy">Prepared By:</label>
+                            <input type="text" class="form-control" id="preparedBy" placeholder="Prepared By">
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="inspecionNumber">Inspecion No:</label>
-                        <input type="text" class="form-control" id="inspecionNumber" placeholder="Inspecion Number">
-                    </div>
-                    <div class="form-group">
-                        <label for="ownerCompany">Owner(Company):</label>
-                        <select class="form-control selectpicker" id="ownerCompany" title="Select Owner(Company)">
-                            <option value="1">1</option>
-                            <option value="1">2</option>
-                            <option value="1">3</option>
-                            <option value="1">4</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="contractorCompany">Contractor(Company):</label>
-                        <select class="form-control selectpicker" id="contractorCompany" title="Select Contractor(Company)">
-                            <option value="1">1</option>
-                            <option value="1">2</option>
-                            <option value="1">3</option>
-                            <option value="1">4</option>
-                        </select>
-                    </div>
+
+
                 </div>
 
                 <div class="halfWidth">
-                    <div class="form-group">
-                        <label for="description">Description</label>
-                        <input type="text" class="form-control" id="description" placeholder="Description">
-                    </div>
-                    <div class="form-group">
-                        <label for="inspectionDate">Inspection Date:</label>
-                        <input type="text" class="form-control datepicker" placeholder="Date" id="inspectionDate" data-date-format="mm/dd/yyyy">
-                    </div>
-                    <div class="form-group">
-                        <label for="consultantCompany">Consultant(Company):</label>
-                        <select class="form-control selectpicker" id="consultantCompany" title="Consultant(Company)">
-                            <option value="1">1</option>
-                            <option value="1">2</option>
-                            <option value="1">3</option>
-                            <option value="1">4</option>
-                        </select>
-                    </div>
-                    <div class="form-group">s
-                        <label for="preparedBy">Prepared By:</label>
-                        <input type="text" class="form-control" id="preparedBy" placeholder="Prepared By">
-                    </div>
+
                 </div>
 
                 <!-- subsection of main content  -->
@@ -149,48 +154,47 @@
                 <!-- / subsection of main content  -->
 
 
-                <div class="halfWidth">
-                    <div class="form-group">
-                        <label for="consultant">Consultant:</label>
-                        <select class="form-control selectpicker" id="consultant" title="Select Consultant">
-                            <option value="1">1</option>
-                            <option value="1">2</option>
-                            <option value="1">3</option>
-                            <option value="1">4</option>
-                        </select>
+                <div class="fullWidth">
+                    <div class="row">
+                        <div class="form-group col-sm-6">
+                            <label for="consultant">Consultant:</label>
+                            <select class="form-control selectpicker" id="consultant" title="Select Consultant">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="contractor">Contractor:</label>
+                            <select class="form-control selectpicker" id="contractor" title="Select Contractor">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="constructionManager">Construction Manager:</label>
+                            <select class="form-control selectpicker" id="constructionManager" title="Select Construction Manager">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="comments">Comments:</label>
+                            <textarea class="form-control" id="comments" rows="2" placeholder="Comments"></textarea>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="attachments">Attachments:</label>
+                            <input type="file" id="attachments">
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="constructionManager">Construction Manager:</label>
-                        <select class="form-control selectpicker" id="constructionManager" title="Select Construction Manager">
-                            <option value="1">1</option>
-                            <option value="1">2</option>
-                            <option value="1">3</option>
-                            <option value="1">4</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="attachments">Attachments:</label>
-                        <input type="file" id="attachments">
-                    </div>
+
+
                 </div>
-
-                <div class="halfWidth">
-                    <div class="form-group">
-                        <label for="contractor">Contractor:</label>
-                        <select class="form-control selectpicker" id="contractor" title="Select Contractor">
-                            <option value="1">1</option>
-                            <option value="1">2</option>
-                            <option value="1">3</option>
-                            <option value="1">4</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="comments">Comments:</label>
-                        <textarea class="form-control" id="comments" rows="2" placeholder="Comments"></textarea>
-                    </div>
-
-                </div>
-
                 <div class="fullWidth">
                     <input type="submit" value="Save" class="btn btn-main"></input>
                 </div>
