--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/frontendOnly.js"></script>
 
 </head>
 <body>
@@ -217,9 +216,9 @@
                 </form>
             </div>
 
-            <div class="fullWidth bottomMargin">
+            <div class="fullWidth bottomMargin tableWrapper">
                 <!-- table inside main content -->
-                <div class="table-responsive">
+                <div class="table-responsive more-to-see">
                     <table class="table table-bordered">
 
                         <!-- table header -->
