9mj #3 title, first chat...

--- a/index.html
+++ b/index.html
@@ -9,18 +9,42 @@
 
 </head>
 <body>
-
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 under-construction-title">
-            <h1 class="text-center">Nati za 9ti mj</h1>
+        <div class="col-xs-12 main-title">
+                <p>Ljubs, evo dođe i prvi 21. a da nismo taj dan zajedno, jbg, sad ne mogu poljubiti, gurnuti neku sitnicu u džep... mogu bar ovo...</p>
         </div>
-        <div class="col-xs-12 under-construction-message">
-            <p class="text-center">ovdje cu ja njoj Mons draga to spraviti</p>
-            <p>posto mi tvoje misljenje puno znaci, baci oko ponekad da vidis kako ide ;)</p>
+        <div class="col-xs-12">
+            <div class="chattitle">
+                <p>Počelo je jednostavno, i jednostrano, običnim sms-om, u običnih 21:50, običnog utorka, 20.10.2015.</p>
+            </div>
         </div>
-        <div class="col-xs-12 under-construction">
-            <p><i class="fa fa-wrench" aria-hidden="true"></i> Under Construction</p>
+        <div class="col-xs-12">
+            <div class="chatwindow nata">
+                <p>Cao, kontam da je glupo sto se ovako javljam, ali eto htjela sam nekako da se cujemo. Uglavnom ja sam Natasa, bila sam maloprije u Grandu.</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow sla">
+                <p>Cao, nije glupo :) drago mi je sto si se javila, Aco Radic mi te je spomenuo :)</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow nata">
+                <p>Cao, kontam da je glupo sto se ovako javljam, ali eto htjela sam nekako da se cujemo. Uglavnom ja sam Natasa, bila sam maloprije u Grandu.</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow sla">
+                <p>Cao, nije glupo :) drago mi je sto si se javila, Aco Radic mi te je spomenuo :)</p>
+            </div>
         </div>
     </div>
 
