9mj #4 intro animated, images (placeholders added)

--- a/index.html
+++ b/index.html
@@ -10,14 +10,35 @@
 </head>
 <body>
 <div class="image-wrapper">
-    <img class="img-responsive image" src="images/giphy.gif" alt="">
+    <div class="image-wrapper-inner">
+
+        <img class="img-responsive image" src="images/1.jpg" alt="">
+        <img class="img-responsive image" src="images/2.jpg" alt="">
+        <img class="img-responsive image" src="images/3.jpg" alt="">
+        <img class="img-responsive image" src="images/4.jpg" alt="">
+        <img class="img-responsive image" src="images/5.jpg" alt="">
+        <img class="img-responsive image" src="images/6.jpg" alt="">
+        <img class="img-responsive image" src="images/7.jpg" alt="">
+        <img class="img-responsive image" src="images/8.jpg" alt="">
+        <img class="img-responsive image" src="images/9.jpg" alt="">
+        <img class="img-responsive image" src="images/10.jpg" alt="">
+        <img class="img-responsive image" src="images/11.jpg" alt="">
+        <img class="img-responsive image" src="images/12.jpg" alt="">
+    </div>
+
+</div>
+
+<div class="intro animated">
+    <div class="wrapper-outer">
+        <div class="wrapper">
+            <p class="animated delayed-intro-1">Ljubs, evo dođe i prvi <span class="imp">21.</span>  a da nismo taj dan zajedno, jbg, sad ne mogu poljubiti, gurnuti neku sitnicu u džep...</p>
+            <p class="animated delayed-intro-2">mogu bar ovo...</p>
+        </div>
+    </div>
 </div>
 
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 main-title">
-                <p>Ljubs, evo dođe i prvi 21. a da nismo taj dan zajedno, jbg, sad ne mogu poljubiti, gurnuti neku sitnicu u džep... mogu bar ovo...</p>
-        </div>
         <div class="col-xs-12">
             <div class="chattitle">
                 <p>Počelo je jednostavno, i jednostrano, običnim sms-om, u običnih 21:50, običnog utorka, 20.10.2015.</p>
