--- a/index.html
+++ b/index.html
@@ -7,18 +7,227 @@
 
     <link rel="stylesheet" href="css/main.min.css">
 
-
 </head>
 <body>
-<div>
-    <p>screen size:</p>
-    <p>width:<span id="h"></span></p>
-    <p>height:<span id="w"></span></p>
-    <p>scrooltop:<span id="st"></span></p>
+<div class="image-wrapper">
+    <div class="image-wrapper-inner">
+
+        <img class="img-responsive image" src="images/1.jpg" alt="">
+        <img class="img-responsive image" src="images/2.jpg" alt="">
+        <img class="img-responsive image" src="images/3.jpg" alt="">
+        <img class="img-responsive image" src="images/4.jpg" alt="">
+        <img class="img-responsive image" src="images/5.jpg" alt="">
+        <img class="img-responsive image" src="images/6.jpg" alt="">
+        <img class="img-responsive image" src="images/7.jpg" alt="">
+        <img class="img-responsive image" src="images/8.jpg" alt="">
+        <img class="img-responsive image" src="images/9.jpg" alt="">
+        <img class="img-responsive image" src="images/10.jpg" alt="">
+        <img class="img-responsive image" src="images/11.jpg" alt="">
+        <img class="img-responsive image" src="images/12.jpg" alt="">
+    </div>
+
 </div>
 
+<div class="image-wrapper-bg">
+    <div class="wrapper">
+        <img class="image" src="images/our1.jpg" alt="">
+        <img class="image" src="images/our2.jpg" alt="">
+        <img class="image" src="images/our3.jpg" alt="">
+        <img class="image" src="images/our4.jpg" alt="">
+        <img class="image" src="images/our7%20-%20Copy%20(3).jpg" alt="">
+        <img class="image" src="images/our5.jpg" alt="">
+        <img class="image" src="images/our6.jpg" alt="">
+        <img class="image" src="images/our7.jpg" alt="">
 
-<script src="js/jquery-3.1.0.min.js"></script>
+        <img class="image" src="images/our8.jpg" alt="">
+        <img class="image" src="images/our9.jpg" alt="">
+        <img class="image" src="images/our10.jpg" alt="">
+        <img class="image" src="images/our11.jpg" alt="">
+    </div>
+</div>
+
+<div class="intro animated">
+    <div class="wrapper-outer">
+        <div class="wrapper">
+            <p class="animated delayed-intro-1">Ljubs, evo dođe i prvi <span class="imp">21.</span>  a da nismo taj dan zajedno, jbg, sad ne mogu ni poljubiti...</p>
+            <p class="animated delayed-intro-2">mogu bar ovo...</p>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <div id="1" class="chattitle animated delayed-1">
+                <p>Počelo je jednostavno, i jednostrano, običnim sms-om, u običnih 21:50, običnog utorka, 20.10.2015.</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div id="2" class="chatwindow nata animated delayed-2">
+                <p>Cao, kontam da je glupo sto se ovako javljam, ali eto htjela sam nekako da se cujemo. Uglavnom ja sam Natasa, bila sam maloprije u Grandu.</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div id="3" class="chatwindow sla animated delayed-3">
+                <p>Cao, nije glupo :) drago mi je sto si se javila, Aco Radic mi te je spomenuo :)</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div id="4" class="dotted animated delayed-4">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div id="5" class="chattitle animated notshown">
+                <p>i krenulo je ludo dopisivanje...</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div id="6" class="chatwindow nata animated notshown delayed-1">
+                <p>Meni omiljena muzika iz filma TOP GUN Ali to je zapravo pj Znaci bolest koliko volim tu pj</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div id="7" class="chatwindow sla animated notshown delayed-2">
+                <p>Take My Breathe Away?</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow nata">
+                <p>Daa Oduzimas mi dah</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow sla">
+                <p>takodje :D hahaha</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow nata">
+                <p>E imala sam filing da ces me iskulirati kad sam ti poslala por,jesam majke mi</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow sla">
+                <p>ZASTO? pa sjecas se grina ljetos ;)</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chattitle">
+                <p>već do 4:25 sledećeg jutra znao sam da sam upoznao nekog posebnog, ali pojma nisam imao koliko posebnog</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chattitle">
+                <p>21.10.2015. geografska dužina: 16.710304°, geografska širina: 44.978878°, vrijeme ~ 21:30 - prvi put sam te poljubio</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chattitle">
+                <p>i onda sam ja "nestao" 4 dana, sad i znaš zašto - činila si se previše dragom da te pustim u svoj svijet</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow sla">
+                <p>Kontam da cu ti prvi put reci VT, kad negdje budem retardiran od piva hahaha</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow nata">
+                <p>reci mi!!!</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chattitle">
+                <p>i evo prođe 9 mjeseci</p>
+                <p>ljubili smo se</p>
+                <p>svađali smo se</p>
+                <p>pravili smo planove</p>
+                <p>"ma ko jebe planove"</p>
+                <p>pomagali smo jedno drugom</p>
+                <p>raskidali smo</p>
+                <p>i dalje smo zajedno</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chattitle">
+                <p>i sad smo na najtežem ispitu - daljini</p>
+                <p>nadam se da ćemo i nju prebroditi kao i sve do sada</p>
+                <p>ma šta nadam, ZNAM</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chattitle">
+                <p>nemoj samo u jedno sumnjati</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<audio id="aud" >
+    <source src="sounds/48-1-10.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
 <script src="js/main.min.js"></script>
 
 </body>
