9mj - intro + button

--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
 
 </head>
 <body>
-<div class="image-wrapper">
-    <div class="image-wrapper-inner">
 
-        <img class="img-responsive image" src="images/1.jpg" alt="">
-        <img class="img-responsive image" src="images/2.jpg" alt="">
-        <img class="img-responsive image" src="images/3.jpg" alt="">
-        <img class="img-responsive image" src="images/4.jpg" alt="">
-        <img class="img-responsive image" src="images/5.jpg" alt="">
-        <img class="img-responsive image" src="images/6.jpg" alt="">
-        <img class="img-responsive image" src="images/7.jpg" alt="">
-        <img class="img-responsive image" src="images/8.jpg" alt="">
-        <img class="img-responsive image" src="images/9.jpg" alt="">
-        <img class="img-responsive image" src="images/10.jpg" alt="">
-        <img class="img-responsive image" src="images/11.jpg" alt="">
-        <img class="img-responsive image" src="images/12.jpg" alt="">
+
+
+
+<div class="intro animated">
+    <div class="wrapper-outer">
+        <div class="wrapper">
+            <p class="animated delayed-intro-1">Ljubs, evo dođe i prvi <span class="imp">21.</span>  a da nismo taj dan zajedno, jbg, sad ne mogu ni poljubiti...</p>
+            <p class="animated delayed-intro-2">mogu bar ovo...</p>
+        </div>
+
+        <div class="button animated delayed-intro-3">
+            <img src="images/fingerprint.png" alt="">
+        </div>
+
     </div>
-
 </div>
 
 <div class="image-wrapper-bg">
@@ -43,15 +42,6 @@
         <img class="image" src="images/our9.jpg" alt="">
         <img class="image" src="images/our10.jpg" alt="">
         <img class="image" src="images/our11.jpg" alt="">
-    </div>
-</div>
-
-<div class="intro animated">
-    <div class="wrapper-outer">
-        <div class="wrapper">
-            <p class="animated delayed-intro-1">Ljubs, evo dođe i prvi <span class="imp">21.</span>  a da nismo taj dan zajedno, jbg, sad ne mogu ni poljubiti...</p>
-            <p class="animated delayed-intro-2">mogu bar ovo...</p>
-        </div>
     </div>
 </div>
 
@@ -227,6 +217,24 @@
     <source src="sounds/48-1-10.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
+
+<div class="image-wrapper">
+    <div class="image-wrapper-inner">
+
+        <img class="img-responsive image" src="images/1.jpg" alt="">
+        <img class="img-responsive image" src="images/2.jpg" alt="">
+        <img class="img-responsive image" src="images/3.jpg" alt="">
+        <img class="img-responsive image" src="images/4.jpg" alt="">
+        <img class="img-responsive image" src="images/5.jpg" alt="">
+        <img class="img-responsive image" src="images/6.jpg" alt="">
+        <img class="img-responsive image" src="images/7.jpg" alt="">
+        <img class="img-responsive image" src="images/8.jpg" alt="">
+        <img class="img-responsive image" src="images/9.jpg" alt="">
+        <img class="img-responsive image" src="images/10.jpg" alt="">
+        <img class="img-responsive image" src="images/11.jpg" alt="">
+        <img class="img-responsive image" src="images/12.jpg" alt="">
+    </div>
+</div>
 
 <script src="js/main.min.js"></script>
 
