9mj - hmm, images added (except mona and micap)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="col-xs-12">
-            <div id="4" class="dotted animated delayed-4">
+            <div id="4" class="dotted animated notshown delayed-4">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
@@ -71,7 +71,7 @@
         </div>
         <div class="col-xs-12">
             <div id="5" class="chattitle animated notshown">
-                <p>i krenulo je ludo dopisivanje...</p>
+                <p>i krenulo je dopisivanje...</p>
             </div>
         </div>
         <div class="col-xs-12">
@@ -85,27 +85,27 @@
             </div>
         </div>
         <div class="col-xs-12">
-            <div class="chatwindow nata">
+            <div id="8" class="chatwindow nata animated notshown delayed-3">
                 <p>Daa Oduzimas mi dah</p>
             </div>
         </div>
         <div class="col-xs-12">
-            <div class="chatwindow sla">
+            <div id="9" class="chatwindow sla animated notshown delayed-4">
                 <p>takodje :D hahaha</p>
             </div>
         </div>
         <div class="col-xs-12">
-            <div class="chatwindow nata">
+            <div id="10" class="chatwindow nata animated notshown delayed-5">
                 <p>E imala sam filing da ces me iskulirati kad sam ti poslala por,jesam majke mi</p>
             </div>
         </div>
         <div class="col-xs-12">
-            <div class="chatwindow sla">
+            <div id="11" class="chatwindow sla animated notshown delayed-6">
                 <p>ZASTO? pa sjecas se grina ljetos ;)</p>
             </div>
         </div>
         <div class="col-xs-12">
-            <div class="dotted">
+            <div id="12" class="dotted animated notshown delayed-7">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
