9mj - first beta - 0.1 - no animations

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <div class="intro animated">
     <div class="wrapper-outer">
         <div class="wrapper">
-            <p class="animated delayed-intro-1">Ljubs, evo dođe i prvi <span class="imp">21.</span>  a da nismo taj dan zajedno, jbg, sad ne mogu ni poljubiti...</p>
-            <p class="animated delayed-intro-2">mogu bar ovo...</p>
+            <p class="animated notshown delayed-intro-1">Ljubs, evo dođe i prvi <span class="imp">21.</span>  a da nismo taj dan zajedno, jbg, sad ne mogu ni poljubiti...</p>
+            <p class="animated notshown delayed-intro-2">mogu bar ovo...</p>
         </div>
 
-        <div class="button animated delayed-intro-3">
+        <div class="button animated notshown delayed-intro-3">
             <img src="images/fingerprint.png" alt="">
         </div>
 
@@ -33,15 +33,16 @@
         <img class="image" src="images/our2.jpg" alt="">
         <img class="image" src="images/our3.jpg" alt="">
         <img class="image" src="images/our4.jpg" alt="">
-        <img class="image" src="images/our7%20-%20Copy%20(3).jpg" alt="">
         <img class="image" src="images/our5.jpg" alt="">
         <img class="image" src="images/our6.jpg" alt="">
         <img class="image" src="images/our7.jpg" alt="">
-
         <img class="image" src="images/our8.jpg" alt="">
         <img class="image" src="images/our9.jpg" alt="">
         <img class="image" src="images/our10.jpg" alt="">
         <img class="image" src="images/our11.jpg" alt="">
+        <img class="image" src="images/our1.jpg" alt="">
+        <img class="image" src="images/our2.jpg" alt="">
+        <img class="image" src="images/our3.jpg" alt="">
     </div>
 </div>
 
@@ -69,6 +70,9 @@
                 <div class="dot"></div>
             </div>
         </div>
+
+
+
         <div class="col-xs-12">
             <div id="5" class="chattitle animated notshown">
                 <p>i krenulo je dopisivanje...</p>
@@ -111,9 +115,12 @@
                 <div class="dot"></div>
             </div>
         </div>
+
+
+
         <div class="col-xs-12">
             <div class="chattitle">
-                <p>već do 4:25 sledećeg jutra znao sam da sam upoznao nekog posebnog, ali pojma nisam imao koliko posebnog</p>
+                <p>...već do 4:25 sledećeg jutra sam znao da si zanimljiva, otvorena, i da bih te baš želio upoznati.</p>
             </div>
         </div>
         <div class="col-xs-12">
@@ -123,10 +130,18 @@
                 <div class="dot"></div>
             </div>
         </div>
+
+
+
         <div class="col-xs-12">
             <div class="chattitle">
-                <p>21.10.2015. geografska dužina: 16.710304°, geografska širina: 44.978878°, vrijeme ~ 21:30 - prvi put sam te poljubio</p>
+                <p>21.10.2015, 21:30</p>
+                <p>geografska dužina: 16.710304°</p>
+                <p>geografska širina: 44.978878°</p>
             </div>
+        </div>
+        <div class="col-xs-12">
+            <img class="img-responsive" src="images/location.png" alt="">
         </div>
         <div class="col-xs-12">
             <div class="dotted">
@@ -135,10 +150,26 @@
                 <div class="dot"></div>
             </div>
         </div>
+
+
+
         <div class="col-xs-12">
             <div class="chattitle">
-                <p>i onda sam ja "nestao" 4 dana, sad i znaš zašto - činila si se previše dragom da te pustim u svoj svijet</p>
+                <p>...i tako se mi počnemo "viđati", kao nije to ništa...</p>
             </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="chatwindow sla">
+                <p>Mala da se ti nisi zaljubila?</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div id="8" class="chatwindow nata">
+                <p>Ma neee, ma kakav ja!</p>
+            </div>
+        </div>
+        <div class="col-xs-12">
+                <img class="img-responsive blushing" src="images/blushing.png" alt="">
         </div>
         <div class="col-xs-12">
             <div class="dotted">
@@ -147,7 +178,12 @@
                 <div class="dot"></div>
             </div>
         </div>
+
+
         <div class="col-xs-12">
+            <div class="chattitle">
+                <p>...pa vremenom to postane veza, ljubav, šta god...</p>
+            </div>
             <div class="chatwindow sla">
                 <p>Kontam da cu ti prvi put reci VT, kad negdje budem retardiran od piva hahaha</p>
             </div>
@@ -158,23 +194,7 @@
             </div>
         </div>
         <div class="col-xs-12">
-            <div class="dotted">
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
-            </div>
-        </div>
-        <div class="col-xs-12">
-            <div class="chattitle">
-                <p>i evo prođe 9 mjeseci</p>
-                <p>ljubili smo se</p>
-                <p>svađali smo se</p>
-                <p>pravili smo planove</p>
-                <p>"ma ko jebe planove"</p>
-                <p>pomagali smo jedno drugom</p>
-                <p>raskidali smo</p>
-                <p>i dalje smo zajedno</p>
-            </div>
+            <img class="img-responsive recimi" src="images/recimi.png" alt="">
         </div>
         <div class="col-xs-12">
             <div class="dotted">
@@ -183,11 +203,76 @@
                 <div class="dot"></div>
             </div>
         </div>
+
+
+
+        <div class="col-xs-12">
+            <div class="chattitle icon-section">
+                <p>...tokom koje smo imali i dobre i loše trenutke...</p>
+            </div>
+        </div>
+
+        <div class="col-xs-12 kissing subtitle-holder">
+            <div class="subtitle">
+                <p>ljubili se</p>
+            </div>
+            <img class="img-responsive" src="images/kissing.png" alt="">
+        </div>
+
+        <div class="col-xs-12 arguing subtitle-holder">
+            <div class="subtitle">
+                <p>svađali se</p>
+            </div>
+            <img class="img-responsive" src="images/arguing.png" alt="">
+        </div>
+
+        <div class="col-xs-12 plans subtitle-holder">
+            <div class="subtitle">
+                <p>pravili planove</p>
+            </div>
+            <img class="img-responsive" src="images/plans.png" alt="">
+        </div>
+
+        <div class="col-xs-12 no-plans subtitle-holder">
+            <div class="subtitle">
+                <p>jebeš planove</p>
+            </div>
+            <img class="img-responsive" src="images/no-plans.png" alt="">
+        </div>
+
+        <div class="col-xs-12 helping-out subtitle-holder">
+            <div class="subtitle">
+                <p>pomagali jedno drugom</p>
+            </div>
+            <img class="img-responsive" src="images/helping-out.png" alt="">
+        </div>
+
+        <div class="col-xs-12 breaking-up subtitle-holder">
+            <div class="subtitle">
+                <p>gubili jedno drugo</p>
+            </div>
+            <img class="img-responsive" src="images/breaking-up.png" alt="">
+        </div>
+
+        <div class="col-xs-12 getting-back-together subtitle-holder">
+            <div class="subtitle">
+                <p>i opet se pronalazili</p>
+            </div>
+            <img class="img-responsive" src="images/getting-back-together.png" alt="">
+        </div>
+
+        <div class="col-xs-12">
+            <div class="dotted">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </div>
+
         <div class="col-xs-12">
             <div class="chattitle">
                 <p>i sad smo na najtežem ispitu - daljini</p>
                 <p>nadam se da ćemo i nju prebroditi kao i sve do sada</p>
-                <p>ma šta nadam, ZNAM</p>
             </div>
         </div>
         <div class="col-xs-12">
@@ -221,21 +306,32 @@
 <div class="image-wrapper">
     <div class="image-wrapper-inner">
 
-        <img class="img-responsive image" src="images/1.jpg" alt="">
-        <img class="img-responsive image" src="images/2.jpg" alt="">
-        <img class="img-responsive image" src="images/3.jpg" alt="">
-        <img class="img-responsive image" src="images/4.jpg" alt="">
-        <img class="img-responsive image" src="images/5.jpg" alt="">
-        <img class="img-responsive image" src="images/6.jpg" alt="">
-        <img class="img-responsive image" src="images/7.jpg" alt="">
-        <img class="img-responsive image" src="images/8.jpg" alt="">
-        <img class="img-responsive image" src="images/9.jpg" alt="">
-        <img class="img-responsive image" src="images/10.jpg" alt="">
-        <img class="img-responsive image" src="images/11.jpg" alt="">
-        <img class="img-responsive image" src="images/12.jpg" alt="">
+        <img id="img1" class="img-responsive image animated notshown delayed-1" src="images/1.jpg" alt="">
+        <img id="img2" class="img-responsive image animated notshown img-target" src="images/2.jpg" alt="">
+        <img id="img3" class="img-responsive image animated notshown img-target" src="images/3.jpg" alt="">
+        <img id="img4" class="img-responsive image animated notshown img-target" src="images/4.jpg" alt="">
+        <img id="img5" class="img-responsive image animated notshown img-target" src="images/5.jpg" alt="">
+        <img id="img6" class="img-responsive image animated notshown img-target" src="images/6.jpg" alt="">
+        <img id="img7" class="img-responsive image animated notshown img-target" src="images/7.jpg" alt="">
+        <img id="img8" class="img-responsive image animated notshown img-target" src="images/8.jpg" alt="">
+        <img id="img9" class="img-responsive image animated notshown img-target" src="images/9.jpg" alt="">
+        <img id="img10" class="img-responsive image animated notshown img-target" src="images/10.jpg" alt="">
+        <img id="img11" class="img-responsive image animated notshown img-target" src="images/11.jpg" alt="">
+        <img id="img12" class="img-responsive image animated notshown img-target" src="images/12.jpg" alt="">
+        <div class="end-trigger"></div>
     </div>
 </div>
 
+<div class="end">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p class="the-end">The End</p>
+                <p class="message">nadam se da ti je izmamilo osmijeh</p>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="js/main.min.js"></script>
 
 </body>
